--- a/index.html
+++ b/index.html
@@ -4,6 +4,14 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/mainLogo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <link rel="apple-touch-icon" href="/mainLogo.png" />
+    <link rel="shortcut icon" href="/mainLogo.png" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=0" />
+    <meta name=" apple-mobile-web-app-capable" content="yes" />
+    <meta name="mobile-web-app-capable" content="yes" />
+    <link rel="/manifest" href="js13kpwa.webmanifest" />
+    <link rel="manifest" href="manifest.json" />
     <title>Turtled</title>
   </head>
   <body>
